SAMPLE_ACCOUNT_FOR_SALESFORCE/force-app/main/default/objects/ApiContacts__c/ApiContacts__c.object-meta.xml
<CustomObject>
    <label>ApiContacts</label>
    <nameField>
        <label>ApiContacts Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>