SAMPLE_ACCOUNT_FOR_SALESFORCE/force-app/main/default/objects/ApiContacts__c/fields/address__c.field-meta.xml
<CustomField>
    <fullName>address__c</fullName>
    <label>address</label>
    <length>40</length>
    <type>Text</type>
</CustomField>