SAMPLE_ACCOUNT_FOR_SALESFORCE/force-app/main/default/objects/ApiContacts__c/fields/gender__c.field-meta.xml
<CustomField>
    <fullName>gender__c</fullName>
    <label>gender</label>
    <length>40</length>
    <type>Text</type>
</CustomField>