SAMPLE_ACCOUNT_FOR_SALESFORCE/force-app/main/default/objects/ApiContacts__c/fields/id__c.field-meta.xml
<CustomField>
    <fullName>id__c</fullName>
    <label>id</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>