SAMPLE_ACCOUNT_FOR_SALESFORCE/force-app/main/default/objects/ApiContacts__c/fields/name__c.field-meta.xml
<CustomField>
    <fullName>name__c</fullName>
    <label>name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>